<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.att.a56withrice.dimit.metrics"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <RelativeLayout
        android:layout_width="378dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timePrompt"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="8dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timePromptCont"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="25dp"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/smartText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/dumbText"
            android:layout_alignStart="@+id/dumbText"
            android:layout_below="@+id/dumbText"
            android:layout_marginTop="11dp"
            android:text="@string/smartKWH" />

        <TextView
            android:id="@+id/smartCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/smartText"
            android:layout_alignBottom="@+id/smartText"
            android:layout_alignLeft="@+id/congratsCalc"
            android:layout_alignStart="@+id/congratsCalc"
            android:text="TextView" />

        <TextView
            android:id="@+id/dumbCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/dumbText"
            android:layout_alignBottom="@+id/dumbText"
            android:layout_alignLeft="@+id/smartCalc"
            android:layout_alignStart="@+id/smartCalc"
            android:text="TextView" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_column="1"
            android:layout_marginTop="16dp"
            android:layout_row="1"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="105dp"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart"
                android:layout_width="382dp"
                android:layout_height="300dp"
                android:layout_column="1"
                android:layout_row="3"
                tools:layout_editor_absoluteX="84dp"
                tools:layout_editor_absoluteY="199dp" />

        </FrameLayout>

        <TextView
            android:id="@+id/congratsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/smartText"
            android:layout_alignStart="@+id/smartText"
            android:layout_below="@+id/smartText"
            android:layout_marginTop="16dp"
            android:text="@string/congrats" />

        <TextView
            android:id="@+id/dumbText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/dumbKWH"
            android:layout_below="@+id/frameLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/congratsCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/congratsText"
            android:layout_alignBottom="@+id/congratsText"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/congratsText"
            android:layout_toRightOf="@+id/congratsText"
            android:text="TextView" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radioButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/dumbText"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/dumbText"
                android:layout_weight="1"
                android:text="@string/opt1" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup"
                android:layout_toEndOf="@+id/radioButton"
                android:layout_toRightOf="@+id/radioButton"
                android:layout_weight="1"
                android:text="@string/opt2" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:text="@string/opt3" />

        </RadioGroup>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
